# arduino-audio-tools

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  FORK_CHANGES.md  Jupyter.ipynb  License.txt  PULL_REQUEST_TEMPLATE.md  README.md  Scenarios.md  TESTING_RESULTS.md  Todo.txt  USB-Audio-Class-2.0-for-Arduino.md  _a2_d_p_stream_8h.html  _a2_d_p_stream_8h_source.html  _a_e_c_8h.html  _a_e_c_8h_source.html  _abstract_meta_data_8h.html  _abstract_meta_data_8h_source.html  _abstract_u_r_l_stream_8h.html  _abstract_u_r_l_stream_8h_source.html  _adaptive_resampling_buffer_8h.html  _adaptive_resampling_buffer_8h_source.html  _adaptive_resampling_stream_8h.html  _adaptive_resampling_stream_8h_source.html  _all_8h.html  _all_8h_source.html  _allocator_8h.html  _allocator_8h_source.html  _analog_audio_arduino_8h.html  _analog_audio_arduino_8h_source.html  _analog_audio_stream_8h.html  _analog_audio_stream_8h_source.html  _analog_config_8h.html  _analog_config_8h_source.html  _analog_config_e_s_p32_8h.html  _analog_config_e_s_p32_8h_source.html  _analog_config_e_s_p32_v1_8h.html  _analog_config_e_s_p32_v1_8h_source.html  _analog_config_std_8h.html  (+3116 more)
cmake-tests/codec/adpcm/: CMakeLists.txt  adpcm.cpp
examples-desktop/generator/: CMakeLists.txt  README.md  generator.cpp  generator.ino
examples/desktop/: CMakeLists.txt  README.md  desktop_example.cpp
examples/examples-desktop/generator/: CMakeLists.txt  README.md  generator.cpp  generator.ino
examples/examples-desktop/min-generator/: CMakeLists.txt  README.md  min-generator.ino
examples/examples-desktop/mp3/: CMakeLists.txt  mp3.cpp  mp3.ino
examples/examples-desktop/ogg/: CMakeLists.txt  ogg.cpp
examples/examples-stk/streams-stk_allinstruments-audiokit/: CMakeLists.txt  streams-stk_allinstruments-audiokit.ino
tests/: CMakeLists.txt  README.md  build-examples-log.txt  build-examples.sh  main.cpp  test_invariant_RTSPSession.h
tests-cmake/: CMakeLists.txt  main.cpp
tests-cmake/codec/: CMakeLists.txt
tests-cmake/codec/aac-faad/: CMakeLists.txt  aac-faad.cpp
tests-cmake/codec/aac-fdk/: CMakeLists.txt  aac-fdk.cpp  audio.h
tests-cmake/codec/aac-fdk-encode/: CMakeLists.txt  aac-fdk-encode.cpp
tests-cmake/codec/aac-helix/: CMakeLists.txt  aac-helix.cpp
tests-cmake/codec/adpcm/: CMakeLists.txt  adpcm.cpp
tests-cmake/codec/alac/: CMakeLists.txt  alac.ino
tests-cmake/codec/container-avi/: CMakeLists.txt  container-avi.cpp
tests-cmake/codec/container-avi-movie/: CMakeLists.txt  container-avi-movie.cpp
tests-cmake/codec/container-binary/: CMakeLists.txt  container-binary.cpp
tests-cmake/codec/container-m4a/: CMakeLists.txt  container-m4a.cpp  m4a.ino
tests-cmake/codec/container-m4a-player/: CMakeLists.txt  container-m4a-player.ino
tests-cmake/codec/hls/: CMakeLists.txt  hls.cpp
tests-cmake/codec/hls-cat/: CMakeLists.txt  hls-cat.cpp
tests-cmake/codec/hls1/: CMakeLists.txt  hls.cpp
tests-cmake/codec/m4a/: CMakeLists.txt  m4a.ino
tests-cmake/codec/m4a-extractor/: CMakeLists.txt  m4a-extrator.ino
tests-cmake/codec/mp3-helix/: CMakeLists.txt  mp3-helix.cpp
tests-cmake/codec/mp3-lame/: CMakeLists.txt  mp3-lame.cpp
tests-cmake/codec/mp3-mad/: CMakeLists.txt  mp3-mad.cpp
tests-cmake/codec/mp3-metadata/: CMakeLists.txt  mp3-metadata.cpp  sample-12s.h
tests-cmake/codec/mp3-mini/: CMakeLists.txt  mp3-mini.ino
tests-cmake/codec/mp3-parser/: CMakeLists.txt  mp3-parser.cpp
tests-cmake/codec/mp4-parser/: CMakeLists.txt  mp4-parser.ino
tests-cmake/codec/mts/: CMakeLists.txt  mts.ino
tests-cmake/codec/opus/: CMakeLists.txt  opus.cpp
tests-cmake/codec/opusogg/: CMakeLists.txt  opusogg.cpp
tests-cmake/codec/wav/: CMakeLists.txt  wav.cpp
tests-cmake/converter-state/: CMakeLists.txt  converter-state.cpp
tests-cmake/effects/: CMakeLists.txt  effects.cpp
tests-cmake/fft/: CMakeLists.txt  fft.cpp
tests-cmake/fft-effect/: CMakeLists.txt  fft-effect.cpp
tests-cmake/filter/: CMakeLists.txt  filter.cpp
tests-cmake/filter-wav/: CMakeLists.txt  filter-wav.cpp
tests-cmake/generator/: CMakeLists.txt  generator.cpp
tests-cmake/hdlc/: CMakeLists.txt  hdlc.cpp
tests-cmake/hls/: CMakeLists.txt  hls.cpp
tests-cmake/ifft/: CMakeLists.txt  ifft.cpp
tests-cmake/miniaudio/: CMakeLists.txt  generator.cpp
tests-cmake/pipeline/: CMakeLists.txt  pipeline.cpp
tests-cmake/pitch-shift/pitch-shift/: pitch-shift.ino
tests-cmake/player-wav/: CMakeLists.txt  player-wav.cpp
tests-cmake/resample/: CMakeLists.txt  resample.cpp
tests-cmake/resample_ext/: CMakeLists.txt  resample_ext.cpp
tests-cmake/rtsp/: CMakeLists.txt  rtsp.cpp
tests-cmake/stt/: CMakeLists.txt  stt_test.cpp
tests-cmake/url-test/: CMakeLists.txt  url-test.cpp
tests-cmake/url-test-http/: CMakeLists.txt  url-test-http.cpp
tests/aac/: CMakeLists.txt  aac.cpp
tests/aac-fdk/: CMakeLists.txt  aac-fdk.cpp
tests/aac-fdk-encode/: CMakeLists.txt  aac-fdk-encode.cpp
tests/aac-helix/: CMakeLists.txt  aac-helix.cpp
tests/channel-converter-increase-in/: channel-converter-increase-in.ino
tests/channel-converter-increase-out/: channel-converter-increase-out.ino
tests/channel-converter-reduce-in/: channel-converter-reduce-in.ino
tests/channel-converter-reduce-out/: channel-converter-reduce-out.ino
tests/codec/: CMakeLists.txt
tests/codec/aac-fdk/: CMakeLists.txt  aac-fdk.cpp
tests/codec/aac-fdk-encode/: CMakeLists.txt
tests/codec/mp3-mad/: CMakeLists.txt  mp3-mad.cpp
tests/effects/: CMakeLists.txt  effects.cpp
tests/fft/: CMakeLists.txt  fft.cpp
tests/filter/: CMakeLists.txt  filter.cpp
tests/filter-wav/: CMakeLists.txt  SdFat.h  filter-wav.cpp
tests/generator/: CMakeLists.txt  generator.cpp
tests/mp3/: CMakeLists.txt  mp3.cpp
tests/mp3-helix/: CMakeLists.txt  mp3-helix.cpp
tests/mp3-lame/: CMakeLists.txt  mp3-lame.cpp
tests/mp3-mad/: CMakeLists.txt  mp3-mad.cpp
tests/mp3-mad_cb/: CMakeLists.txt  mp3-mad_cb.cpp
tests/mp3-metadata/: CMakeLists.txt  mp3-metadata.cpp
tests/mp3-mini/: CMakeLists.txt  mp3.cpp
tests/resample/: CMakeLists.txt  resample.cpp
tests/url-test/: CMakeLists.txt  url-test.cpp
(+4558 files in other folders)
